# agentic-debt-collection

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.md  docker-compose.yml  pyproject.toml
app/: __init__.py  logging_config.py  main.py  worker.py
app/activities/: __init__.py  agents.py
app/eval/: __main__.py  ab_harness.py  audit_trail.py  borrower_sim.py  conversation_runner.py  cost_ledger.py  failure_miner.py  harness.py  judges.py  meta_ab.py  meta_eval.py  meta_oracle.py  metrics.py  models.py  proposer.py  rollback.py  run_eval.py  run_self_learn.py  scenarios.py  self_learn.py  stats.py
app/models/: __init__.py  pipeline.py  prompt.py
app/prompts/: assessment.txt  directives.json  final_notice.txt  resolution.txt
app/services/: __init__.py  account_store.py  anthropic_client.py  compliance.py  compliance_judge.py  compliance_vector_store.py  handoff.py  llm_anthropic.py  llm_openai.py  llm_types.py  prompt_assembler.py  prompt_loader.py  prompt_registry.py  summarization.py  token_budget.py  vapi_client.py  voice_client.py
app/static/: test.css  test.html  test.js
app/workflows/: borrower_workflow.py
data/gold/: README.txt
scripts/: dev-launch.sh  test_step1_multiturn.py
tests/: manual_vector_test.py  test_anthropic_client.py  test_assessment_opening_disclosure.py  test_compliance.py  test_compliance_judge.py  test_handoff.py  test_meta_eval.py  test_overflow_integration.py  test_self_learn.py  test_stage_directives.py  test_summarization.py  test_token_budget.py  test_vapi_voice.py
(+5 files in other folders)
